# yathzee-world

./: Dockerfile  README.md
backend/: Cargo.toml  README.md
backend/src/: api.rs  config.rs  main.rs
backend/src/api/: identity.rs  mod.rs
backend/src/db/: users.rs
backend/src/entities/: users.rs
backend/src/migrator/: m20220101_000001_users.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/lib/: userManagement.svelte.ts  userManagement.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
