[package]
name = "yathzee-world"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.3"
env_logger = "0.11.8"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.27"
sea-orm = { version = "1.1.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "1.1.15"
serde = "1.0.219"
toml = "0.9.5"

[features]
staticserve = []
